correct cursor bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,10 @@ border: 3px solid black;
  
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1200px) {
     #cursor_custom
     {
-        display: none !important;
+        display: none;
     }
 }
 
